Add Loadout support for splatoon 3 Fix a bug with /private generate Add Stages to random privates Fix forgetting to commit